--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Anular.cshtml
@@ -80,7 +80,7 @@
 
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","ArchivosTransferencias",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
