--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
@@ -558,7 +558,7 @@
 
             <div class="col-md-4">
                 <div class="form-group">
-                    <label for="IdRubro_prov_vac">Rubro para bono por antiguedad*</label>
+                    <label for="IdRubro_bono_x_antiguedad">Rubro para bono por antiguedad*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_bono_x_antiguedad, settings =>
                {
                    settings.Name = "IdRubro_bono_x_antiguedad";
