--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/_GridViewPartial_rubros_fijos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/_GridViewPartial_rubros_fijos.cshtml
@@ -7,6 +7,9 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdRubroFijo";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -76,10 +79,10 @@
         settings.Columns.Add("IdRubroFijo", "ID").Width=Unit.Percentage(5);
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(25);
-        settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(9);
+        settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(10);
         settings.Columns.Add("DescripcionProcesoNomina","Tipo liquidación").Width = Unit.Percentage(15);
         settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(20);
-        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(8);
+        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(10);
 
     });
 }
