--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_cliente_contacto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_cliente_contacto.cshtml
@@ -1,118 +1,118 @@
 @using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_cliente_contacto";
-        settings.CallbackRouteValues = new { Controller = "Cliente", Action = "GridViewPartial_cliente_contacto" };
-        settings.KeyFieldName = "IdContacto";
-        settings.Width = Unit.Percentage(100);
+        var grid = Html.DevExpress().GridView(settings => {
+            settings.Name = "GridView_cliente_contacto";
+            settings.CallbackRouteValues = new { Controller = "Cliente", Action = "GridViewPartial_cliente_contacto" };
+            settings.KeyFieldName = "IdContacto";
+            settings.Width = Unit.Percentage(100);
 
-        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Cliente", Action = "EditingAddNew", Area = "Facturacion" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Cliente", Action = "EditingUpdate", Area = "Facturacion" };
+            settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+            settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Cliente", Action = "EditingAddNew", Area = "Facturacion" };
+            settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Cliente", Action = "EditingUpdate", Area = "Facturacion" };
 
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = true;
-        settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = false;
+            settings.CommandColumn.Visible = true;
+            settings.CommandColumn.ShowNewButton = true;
+            settings.CommandColumn.ShowEditButton = true;
+            settings.CommandColumn.ShowDeleteButton = false;
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
-        settings.SettingsBehavior.EnableCustomizationWindow = true;
+            settings.SettingsContextMenu.Enabled = true;
+            settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
+            settings.SettingsBehavior.EnableCustomizationWindow = true;
 
-        settings.SettingsPager.Visible = true;
-        settings.Settings.ShowGroupPanel = false;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
+            settings.SettingsPager.Visible = true;
+            settings.Settings.ShowGroupPanel = false;
+            settings.SettingsBehavior.AllowSelectByRowClick = true;
 
-        //Configuracion responsive
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+            //Configuracion responsive
+            settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+            settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+            settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+            settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+            settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        //Funcion para inicializar fila al presionar nuevo
-        settings.InitNewRow = (s, e) =>
-        {
-            e.NewValues["Nombres"] = "";
-            e.NewValues["IdCiudad"] = null;
-            e.NewValues["IdParroquia"] = null;
-        };
-
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Nombres";
-            column.Caption = "Nombre*";
-            column.Width = Unit.Percentage(20);
-            column.ColumnType = MVCxGridViewColumnType.TextBox;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Telefono";
-            column.Caption = "Teléfono";
-            column.Width = Unit.Percentage(7);
-            column.ColumnType = MVCxGridViewColumnType.TextBox;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Celular";
-            column.Caption = "Celular";
-            column.Width = Unit.Percentage(7);
-            column.ColumnType = MVCxGridViewColumnType.TextBox;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Correo";
-            column.Caption = "Correo";
-            column.Width = Unit.Percentage(10);
-            column.ColumnType = MVCxGridViewColumnType.TextBox;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Direccion";
-            column.Caption = "Dirección";
-            column.Width = Unit.Percentage(10);
-            column.ColumnType = MVCxGridViewColumnType.TextBox;
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Name = "IdCiudad";
-            column.FieldName = "IdCiudad";
-            column.Caption = "Ciudad*";
-            column.Width = Unit.Percentage(15);
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-            column.EditorProperties().ComboBox(p =>
+            //Funcion para inicializar fila al presionar nuevo
+            settings.InitNewRow = (s, e) =>
             {
-                p.Columns.Add("Descripcion_Ciudad", "Descripción").Width = Unit.Percentage(100);
-                p.TextField = "Descripcion_Ciudad";
-                p.ValueField = "IdCiudad";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_ciudad;
-                p.ClientSideEvents.SelectedIndexChanged = "OnSelectedCiudadChanged";
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdParroquia";
-            column.Caption = "Parroquia*";
-            column.Width = Unit.Percentage(20);
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.CallbackRouteValues = new { Controller = "Cliente", Action = "get_parroquias" };
-                p.TextField = "nom_parroquia";
-                p.ValueField = "IdParroquia";
-                p.ValueType = typeof(string);
-                //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
-                p.BindList(ViewBag.lst_parroquia);
-                p.ClientSideEvents.BeginCallback = "ParroquiaComboBox_BeginCallBack";
-            });
-        });
+                e.NewValues["Nombres"] = "";
+                e.NewValues["IdCiudad"] = null;
+                e.NewValues["IdParroquia"] = null;
+            };
 
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Nombres";
+                column.Caption = "Nombre*";
+                column.Width = Unit.Percentage(20);
+                column.ColumnType = MVCxGridViewColumnType.TextBox;
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Telefono";
+                column.Caption = "Teléfono";
+                column.Width = Unit.Percentage(7);
+                column.ColumnType = MVCxGridViewColumnType.TextBox;
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Celular";
+                column.Caption = "Celular";
+                column.Width = Unit.Percentage(7);
+                column.ColumnType = MVCxGridViewColumnType.TextBox;
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Correo";
+                column.Caption = "Correo";
+                column.Width = Unit.Percentage(10);
+                column.ColumnType = MVCxGridViewColumnType.TextBox;
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "Direccion";
+                column.Caption = "Dirección";
+                column.Width = Unit.Percentage(10);
+                column.ColumnType = MVCxGridViewColumnType.TextBox;
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+            });
+            settings.Columns.Add(column =>
+            {
+                column.Name = "IdCiudad";
+                column.FieldName = "IdCiudad";
+                column.Caption = "Ciudad*";
+                column.Width = Unit.Percentage(15);
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+                column.EditorProperties().ComboBox(p =>
+                {
+                    p.Columns.Add("Descripcion_Ciudad", "Descripción").Width = Unit.Percentage(100);
+                    p.TextField = "Descripcion_Ciudad";
+                    p.ValueField = "IdCiudad";
+                    p.ValueType = typeof(string);
+                    p.DataSource = ViewBag.lst_ciudad;
+                    p.ClientSideEvents.SelectedIndexChanged = "OnSelectedCiudadChanged";
+                });
+            });
+            settings.Columns.Add(column =>
+            {
+                column.FieldName = "IdParroquia";
+                column.Caption = "Parroquia*";
+                column.Width = Unit.Percentage(20);
+                column.EditFormSettings.Visible = DefaultBoolean.True;
+                column.EditorProperties().ComboBox(p =>
+                {
+                    p.CallbackRouteValues = new { Controller = "Cliente", Action = "get_parroquias" };
+                    p.TextField = "nom_parroquia";
+                    p.ValueField = "IdParroquia";
+                    p.ValueType = typeof(string);
+                    //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
+                    p.BindList(ViewBag.lst_parroquia);
+                    p.ClientSideEvents.BeginCallback = "ParroquiaComboBox_BeginCallBack";
+                    p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                });
+            });
         settings.CellEditorInitialize = (sender, e) =>
         {
             ASPxEdit editor = (ASPxEdit)e.Editor;
@@ -121,8 +121,5 @@
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
 
     });
-
-
-
 }
 @grid.Bind(Model).GetHtml()
