--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Nuevo.cshtml
@@ -103,3 +103,13 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
+<script>
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["cb_Fecha"] = cb_Fecha.GetValue();
+    }
+</script>
