--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -39,6 +39,7 @@
             e.NewValues["dc_Valor_haber"] = 0;
             e.NewValues["dc_Valor_debe"] = 0;
             e.NewValues["IdCtaCble"] = null;
+            e.NewValues["IdGrupoPresupuesto"] = null;
             e.NewValues["dc_para_conciliar"] = false;
         };
 
@@ -46,7 +47,7 @@
         {
             column.FieldName = "IdCtaCble";
             column.Caption = "Cuenta contable";
-            column.Width = Unit.Percentage(60);
+            column.Width = Unit.Percentage(40);
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("IdCtaCble", "Código").Width = Unit.Percentage(30);
@@ -54,6 +55,24 @@
                 p.ValueField = "IdCtaCble";
                 p.ValueType = typeof(string);
                 p.DataSource = ViewBag.lst_cuentas;
+                p.ClientSideEvents.SelectedIndexChanged = "OnSelectedCtaCbleChanged";
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdGrupoPresupuesto";
+            column.Caption = "Grupo";
+            column.Width = Unit.Percentage(20);
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.CallbackRouteValues = new { Controller = "ComprobanteContable", Action = "CargarGrupo", TextField = "Descripcion" };
+                p.TextField = "Descripcion";
+                p.ValueField = "IdGrupo";
+                p.ValueType = typeof(int);
+                //p.ClientSideEvents.Init = "function(s,e){s.PerformCallback();}";
+                p.BindList(ViewBag.lst_grupos);
+                p.ClientSideEvents.BeginCallback = "GrupoComboBox_BeginCallback";
+                p.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
             });
         });
         settings.Columns.Add(column =>
