--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -559,7 +559,7 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","Deudas",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
     @section Scripts {
