--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Anular.cshtml
@@ -99,3 +99,12 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script>
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["cb_Fecha"] = cb_Fecha.GetValue();
+    }
+</script>
