--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Core.Erp.Web.Helps
 @{
     ViewBag.Title = "Proveedor";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,7 +10,12 @@
 
 @using (Html.BeginForm())
 {
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
 
-    @Html.Action("GridViewPartial_proveedor")
+@Html.Action("GridViewPartial_proveedor")
 
 }
