--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor_importacion.cshtml
@@ -50,8 +50,8 @@
         };
         settings.Columns.Add("IdProveedor", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("info_persona.pe_cedulaRuc", "Cédula/Ruc").Width = Unit.Percentage(20);
-        settings.Columns.Add("descripcion_clas_prove", "Clase proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("info_persona.pe_nombreCompleto", "Nombre completo").Width = Unit.Percentage(30);
+        settings.Columns.Add("IdClaseProveedor", "Clase proveedor").Width = Unit.Percentage(30);
+        settings.Columns.Add("info_persona.pe_nombreCompleto", "Nombre completo").Width = Unit.Percentage(25);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
