--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
@@ -83,7 +83,7 @@
                         <div role="tabpanel" class="tab-pane active" style="margin-left: 2em;" id="tbl_diario">
                             @Html.Action("GridViewPartial_sueldo_x_pagar")
                         </div>
-                        <div role="tabpanel" class="tab-pane active" style="margin-left: 2em;" id="tbl_provisiones">
+                        <div role="tabpanel" class="tab-pane" style="margin-left: 2em;" id="tbl_provisiones">
 
                             @Html.Action("GridViewPartial_provisiones")
 
