--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -279,95 +279,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="precio_2">Precio 2</label>
-                            @Html.TextBoxFor(q => q.precio_2, new { @class = "form-control", @id = "precio_2" })
-                            @Html.ValidationMessageFor(q => q.precio_2, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <label for="signo_2">Signo 2</label>
-                            @Html.DropDownListFor(q => q.signo_2, new SelectList(ViewBag.lst_signos, "Key", "Value"), new { @class = "form-control", @id = "signo_2" })
-                            @Html.ValidationMessageFor(q => q.signo_2, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="porcentaje_2">Porcentaje 2</label>
-                            @Html.TextBoxFor(q => q.porcentaje_2, new { @class = "form-control", @id = "porcentaje_2" })
-                            @Html.ValidationMessageFor(q => q.porcentaje_2, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="precio_3">Precio 3</label>
-                            @Html.TextBoxFor(q => q.precio_3, new { @class = "form-control", @id = "precio_3" })
-                            @Html.ValidationMessageFor(q => q.precio_3, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <label for="signo_3">Signo 3</label>
-                            @Html.DropDownListFor(q => q.signo_3, new SelectList(ViewBag.lst_signos, "Key", "Value"), new { @class = "form-control", @id = "signo_3" })
-                            @Html.ValidationMessageFor(q => q.signo_3, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="porcentaje_3">Porcentaje 3</label>
-                            @Html.TextBoxFor(q => q.porcentaje_3, new { @class = "form-control", @id = "porcentaje_3" })
-                            @Html.ValidationMessageFor(q => q.porcentaje_3, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="precio_4">Precio 4</label>
-                            @Html.TextBoxFor(q => q.precio_4, new { @class = "form-control", @id = "precio_4" })
-                            @Html.ValidationMessageFor(q => q.precio_4, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <label for="signo_4">Signo 4</label>
-                            @Html.DropDownListFor(q => q.signo_4, new SelectList(ViewBag.lst_signos, "Key", "Value"), new { @class = "form-control", @id = "signo_4" })
-                            @Html.ValidationMessageFor(q => q.signo_4, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="porcentaje_4">Porcentaje 4</label>
-                            @Html.TextBoxFor(q => q.porcentaje_4, new { @class = "form-control", @id = "porcentaje_4" })
-                            @Html.ValidationMessageFor(q => q.porcentaje_4, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="precio_5">Precio 5</label>
-                            @Html.TextBoxFor(q => q.precio_5, new { @class = "form-control", @id = "precio_5" })
-                            @Html.ValidationMessageFor(q => q.precio_5, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <label for="signo_5">Signo 5</label>
-                            @Html.DropDownListFor(q => q.signo_5, new SelectList(ViewBag.lst_signos, "Key", "Value"), new { @class = "form-control", @id = "signo_5" })
-                            @Html.ValidationMessageFor(q => q.signo_5, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="form-group">
-                            <label for="porcentaje_5">Porcentaje 5</label>
-                            @Html.TextBoxFor(q => q.porcentaje_5, new { @class = "form-control", @id = "porcentaje_5" })
-                            @Html.ValidationMessageFor(q => q.porcentaje_5, "", new { @class = "text-danger" })
-                        </div>
+                    <div class="col-md-12">
+                        @Html.Action("GridViewPartial_producto_x_niveldescuento")
                     </div>
                 </div>
             </div>
