--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -150,7 +150,7 @@
                 <a href="#tab_general" aria-controls="general" role="tab" data-toggle="tab">Datos generales</a>
             </li>
             <li>
-                <a href="#link_precios" aria-controls="Precios" role="tab" data-toggle="tab" id="link_precios">Precios</a>
+                <a href="#tab_precios" aria-controls="Precios" role="tab" data-toggle="tab" id="link_precios">Precios</a>
             </li>
             <li>
                 <a href="#tab_composicion" aria-controls="Composicion" role="tab" data-toggle="tab">Composición</a>
@@ -268,7 +268,7 @@
             </div>
 
 
-            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="link_precios">
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_precios">
                 <div class="row">
                     <div class="col-md-2">
                         <div class="form-group">
@@ -297,7 +297,7 @@
                 <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_producto_x_bodega">
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="col-md-3">
+                            <div class="col-md-12">
                                 <div class="form-group">
                                     @Html.Action("GridViewPartial_producto_por_bodega")
 
