--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Nuevo.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Core.Erp.Info.RRHH.ro_Solicitud_Vacaciones_x_empleado_Info
 @{
-    ViewBag.Title = "Nuevo Solicitud";
+    ViewBag.Title = "Nueva solicitud";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
