--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/_GridViewPartial_cargo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Cargo/_GridViewPartial_cargo.cshtml
@@ -7,6 +7,9 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdCargo";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
