--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Core.Erp.Web.Helps
+
 @{
     ViewBag.Title = "Productos";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -10,6 +11,12 @@
 
 @using (Html.BeginForm())
 {
+
+    <div class="row">
+        <div class="col-md-12">
+            <a class="btn btn-primary" href="@Url.Action("Importar","Producto",new { Area = "Inventario", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
+        </div>
+    </div>
 
     @Html.Action("GridViewPartial_producto")
 
