--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Importar.cshtml
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            @*<div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_linea">
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_linea">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -143,7 +143,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-                            @Html.Action("GridViewPartial_SubgrupoPro_importacion")
+                           @Html.Action("GridViewPartial_SubgrupoPro_importacion")
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-            </div>*@
+            </div>
         </div>
     </div>
     
