--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_SubgrupoPro_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_SubgrupoPro_importacion.cshtml
@@ -49,6 +49,7 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdSubgrupo", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("cod_subgrupo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("nom_Subgrupo", "Descripción").Width = Unit.Percentage(70);
 
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
