--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Nuevo.cshtml
@@ -142,8 +142,6 @@
     }
 }
 <script>
-
-
     $("#IdTipoPersona").change(function () {
         IdEntidad.SetValue(null);
     });
@@ -187,5 +185,14 @@
             error: function (error) {
             }
         });
+    }
+
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["cb_Fecha"] = cm_fecha.GetValue();
+        console.log(e.customArgs["cb_Fecha"]);
     }
 </script>
