--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Anular.cshtml
@@ -174,4 +174,12 @@
             }
         });
     }
+
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
+        e.customArgs["cb_Fecha"] = cm_fecha.GetValue();
+    }
 </script>
