--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
@@ -190,8 +190,7 @@
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
     function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
-        e.customArgs["cb_Fecha"] = new Date(moment(cm_fecha.GetValue(), "DD/MM/YYYY"));
-        console.log(e.customArgs["cb_Fecha"]);
+        e.customArgs["IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();        
+        e.customArgs["cb_Fecha"] = moment(cm_fecha.GetDate()).format('DD/MM/YYYY');
     }
 </script>
