--- a/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/ComprobantesSinAutorizacion/Index.cshtml
@@ -28,7 +28,7 @@
 </script>
 @using (Html.BeginForm("Index", "ComprobantesSinAutorizacion",FormMethod.Post,new { @role = "form", @id = "myform" }))
 {
-    <div class="box collapsed-box">
+    <div class="box">
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
