--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/TipoComprobante/Modificar.cshtml
@@ -5,6 +5,8 @@
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "TipoComprobante", FormMethod.Post, new { @class = "form", @role = "form" }))
