--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_GridViewPartial_comprador.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/_GridViewPartial_comprador.cshtml
@@ -81,9 +81,9 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdComprador", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("IdUsuario_com", "Usuario").Width = Unit.Percentage(10);
-        settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdComprador", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(50);
+        settings.Columns.Add("IdUsuario_com", "Usuario").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
