--- a/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/_GridViewPartial_departamento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/_GridViewPartial_departamento.cshtml
@@ -81,8 +81,8 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdDepartamento", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("nom_departamento", "Descripción").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdDepartamento", "ID").Width = Unit.Percentage(20);
+        settings.Columns.Add("nom_departamento", "Descripción").Width = Unit.Percentage(70);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
